--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando Git</title>
+    <title>Practicando Git desde VScode</title>
 </head>
 
 <body>
@@ -14,6 +14,11 @@
     <section>
         <p>Estoy en la rama TEST</p>
     </section>
+    <div>
+        <p>
+            Este cambio fue realizado desde VS code
+        </p>
+    </div>
 </body>
 
 </html>
